--- a/TableView/src/main/res/values/dimens.xml
+++ b/TableView/src/main/res/values/dimens.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright © 2017 CHANGLEI. All rights reserved.
+  -->
+
 <resources>
     <dimen name="sizeRowDefaultHeight">48dp</dimen>
 </resources>
