--- a/TableView/src/main/res/values/styles.xml
+++ b/TableView/src/main/res/values/styles.xml
@@ -1,7 +1,3 @@
-<!--
-  ~ Copyright © 2017 CHANGLEI. All rights reserved.
-  -->
-
 <resources>
 
     <!-- Base application theme. -->
@@ -10,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowBackground">@color/windowBackground</item>
     </style>
 
 </resources>
