--- a/TableView/src/main/res/values/colors.xml
+++ b/TableView/src/main/res/values/colors.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright © 2017 CHANGLEI. All rights reserved.
-  -->
-
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="windowBackground">#f2f2f2</color>
 </resources>
