--- a/TableView/src/main/res/layout/layout_row_name.xml
+++ b/TableView/src/main/res/layout/layout_row_name.xml
@@ -15,7 +15,7 @@
         android:contentDescription="@string/app_name"
         tools:src="@mipmap/ic_launcher"/>
 
-    <me.box.app.kotlintest.view.TableValueView
+    <com.box.me.widget.view.TableValueView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
