--- a/TableView/src/main/res/layout/layout_row_name.xml
+++ b/TableView/src/main/res/layout/layout_row_name.xml
@@ -11,6 +11,7 @@
         android:id="@+id/iv_avatar"
         android:layout_width="32dp"
         android:layout_height="32dp"
+        android:layout_gravity="center"
         android:layout_marginBottom="4dp"
         android:contentDescription="@string/app_name"
         tools:src="@mipmap/ic_launcher"/>
@@ -19,6 +20,7 @@
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         tools:text="@string/app_name"/>
 
 </LinearLayout>
