--- a/TableViewLibrary/src/main/res/layout/layout_table_view.xml
+++ b/TableViewLibrary/src/main/res/layout/layout_table_view.xml
@@ -13,6 +13,11 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <Space
+            android:id="@+id/spacer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
         <android.support.v4.widget.NestedScrollView
             android:id="@+id/row_scroll"
             android:layout_width="wrap_content"
