--- a/testtableview/src/main/res/layout/layout_row_name.xml
+++ b/testtableview/src/main/res/layout/layout_row_name.xml
@@ -23,4 +23,9 @@
         android:layout_gravity="center"
         tools:text="@string/app_name"/>
 
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="0.5dp"
+        android:background="#cecece"/>
+
 </LinearLayout>
