--- a/testtableview/src/main/res/layout/layout_row_name.xml
+++ b/testtableview/src/main/res/layout/layout_row_name.xml
@@ -4,27 +4,34 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:gravity="center"
-              android:orientation="vertical"
-              android:padding="4dp">
+              android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/iv_avatar"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="4dp"
-        android:contentDescription="@string/app_name"
-        tools:src="@mipmap/ic_launcher"/>
-
-    <me.box.app.testtableview.TableValueView
-        android:id="@+id/tv_name"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        tools:text="@string/app_name"/>
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="4dp">
+
+        <ImageView
+            android:id="@+id/iv_avatar"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="4dp"
+            android:contentDescription="@string/app_name"
+            tools:src="@mipmap/ic_launcher"/>
+
+        <me.box.app.testtableview.TableValueView
+            android:id="@+id/tv_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            tools:text="@string/app_name"/>
+    </LinearLayout>
 
     <View
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="#cecece"/>
 
