--- a/TableViewLibrary/src/main/res/layout/widget_item_table.xml
+++ b/TableViewLibrary/src/main/res/layout/widget_item_table.xml
@@ -5,7 +5,7 @@
               android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/item_row_container"
+        android:id="@+id/widget_item_row_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
