--- a/testtableview/src/main/res/layout/item_table_value.xml
+++ b/testtableview/src/main/res/layout/item_table_value.xml
@@ -2,12 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
+              android:gravity="center"
+              android:minHeight="48dp"
               android:orientation="vertical">
 
     <me.box.app.testtableview.TableValueView
         android:id="@+id/tv_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"/>
 
     <View
         android:layout_width="match_parent"
