--- a/testtableview/src/main/res/layout/activity_test_table_view.xml
+++ b/testtableview/src/main/res/layout/activity_test_table_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
@@ -13,7 +14,8 @@
             android:id="@+id/vh_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/white"/>
+            android:background="@android:color/white"
+            app:columnHeaderDivider="@drawable/shape_verital_divider"/>
     </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
