--- a/TableViewLibrary/src/main/res/layout/widget_layout_table_view.xml
+++ b/TableViewLibrary/src/main/res/layout/widget_layout_table_view.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright © 2017 CHANGLEI. All rights reserved.
+  -->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
@@ -12,7 +16,8 @@
         android:id="@+id/widget_row_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:showDividers="middle">
 
         <Space
             android:id="@+id/widget_spacer"
