增加适配器

--- a/testtableview/src/main/res/layout/activity_test_table_view.xml
+++ b/testtableview/src/main/res/layout/activity_test_table_view.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright © 2017 CHANGLEI. All rights reserved.
+  -->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
@@ -15,7 +19,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
-            app:columnHeaderDivider="@drawable/shape_horizontal_divider"/>
+            app:columnHeaderDivider="@drawable/shape_horizontal_divider"
+            app:rowHeaderDivider="@drawable/shape_vertical_divider"/>
     </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
