--- a/TableViewLibrary/src/main/res/layout/widget_item_table.xml
+++ b/TableViewLibrary/src/main/res/layout/widget_item_table.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright © 2017 CHANGLEI. All rights reserved.
+  -->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/widget_item_row_container"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:orientation="vertical">
-
-    <LinearLayout
-        android:id="@+id/widget_item_row_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:showDividers="middle"/>
-
-</LinearLayout>
+              android:gravity="center_vertical"
+              android:orientation="horizontal"
+              android:showDividers="middle"/>
