--- a/TableViewLibrary/src/main/res/layout/widget_layout_table_view.xml
+++ b/TableViewLibrary/src/main/res/layout/widget_layout_table_view.xml
@@ -51,7 +51,7 @@
         <LinearLayout
             android:id="@+id/widget_column_container"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:showDividers="middle">
 
