--- a/TableViewLibrary/src/main/res/layout/widget_item_table.xml
+++ b/TableViewLibrary/src/main/res/layout/widget_item_table.xml
@@ -3,10 +3,8 @@
   ~ Copyright © 2017 CHANGLEI. All rights reserved.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/widget_item_row_container"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:gravity="center_vertical"
-              android:orientation="horizontal"
-              android:showDividers="middle"/>
+<android.support.v7.widget.ContentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                              android:id="@+id/widget_item_row_container"
+                                              android:layout_width="wrap_content"
+                                              android:layout_height="wrap_content"
+                                              android:gravity="center_vertical"/>
